--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,9 +11,6 @@
             body {
                 margin-left: 3rem;
             }
-            h1, h2, h3, h4 {
-                border-bottom: 0.7rem;
-            }
             .ind {
                 margin-left: 2rem;
             }
@@ -25,9 +22,9 @@
         <h4>/nsfw</h4>
         <ul>
             <li>Returns a NSFW image</li>
-            <li>Query <code>category</code> required</li>
-            <li class="ind" style="list-style: circle;">Available query values: <code>waifu</code>, <code>neko</code>, <code>trap</code>, <code>blowjob</code></li>
-            <li>Example: <code>https://api.abysmal.eu.org/nsfw?category=waifu</code></li>
+            <li>Path required</li>
+            <li class="ind" style="list-style: circle;">Available paths: <code>waifu</code>, <code>neko</code>, <code>trap</code>, <code>blowjob</code></li>
+            <li>Example: <code>https://api.abysmal.eu.org/nsfw/waifu</code></li>
         </ul>
         <br>
 
