--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,39 +7,10 @@
         <title>Abysmal API</title>
         <link rel="stylesheet" href="https://tilde.team/css/hacker.css">
         <link rel="icon" href="https://abysmal.eu.org/favicon.ico" type="image/x-icon">
-        <style>
-            body {
-                margin-left: 3rem;
-            }
-            .ind {
-                margin-left: 2rem;
-            }
-        </style>
     </head>
-    <body>
-        <h3>Abysmal API</h3>
+    <body class="text-center">
+        <h1>Abysmal API</h1>
         
-        <h4>/nsfw</h4>
-        <ul>
-            <li>Returns a NSFW image</li>
-            <li>Path required</li>
-            <li class="ind" style="list-style: circle;">Available paths: <code>waifu</code>, <code>neko</code>, <code>trap</code>, <code>blowjob</code></li>
-            <li>Example: <code>https://api.abysmal.eu.org/nsfw/waifu</code></li>
-        </ul>
-        <br>
-
-        <h4>/catboy</h4>
-        <ul>
-            <li>Returns a catboy image (SFW)</li>
-            <li>Example: <code>https://api.abysmal.eu.org/catboy</code></li>
-        </ul>
-        <br>
-
-        <h4>/neko</h4>
-        <ul>
-            <li>Returns a neko image (SFW)</li>
-            <li>Example: <code>https://api.abysmal.eu.org/neko</code></li>
-        </ul>
-        <br>
+        <h3><a onclick="window.location = '//abysmal.eu.org'" style="cursor: pointer;">Home</a></h3>
     </body>
 </html>
